keycloak-19-mssql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak4
  labels:
    app: keycloak4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak4
  template:
    metadata:
      labels:
        app: keycloak4
    spec:
      volumes:
        - name: themes
          persistentVolumeClaim:
            claimName: ashis-claims1
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:19.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
