keycloak-19-mssql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak4
  labels:
    app: keycloak4
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak4
  type: LoadBalancer
